# conways_game_of_life

./: LICENSE  README.md  pyproject.toml
app/: game.ts
src/: game.py  interaction.py
